# just-mcp

./: .dockerignore  .gitignore  AGENTS 2.md  CHANGELOG.md  COCOGITTO_FIX_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_INSTRUCTIONS.md  Dockerfile  FIX_SUMMARY.md  FORCE_PUSH_REQUIRED.md  NPM_PIP_IMPLEMENTATION.md  PACKAGE_MAINTENANCE.md  README-FIX.md  README.md  TAG_CREATION_INSTRUCTIONS.md  TESTING.md  cog.toml  justfile  server.json
.github 2/workflows/: ci.yml  release.yml
.github/workflows/: build-binaries.yml  container.yaml  release.yml
just-mcp-lib/: Cargo.toml
npm/: LICENSE  README.md  index.js  install.js  package.json
pkgx/: README.md
python/: README.md  pyproject.toml
python/just_mcp/: __init__.py
scripts/: fix-commit-message.sh  force-push-fix.sh  publish-packages.sh  update-server-json-version.sh
