[workspace]
members = ["just-mcp-lib"]

[package]
name = "just-mcp"
version = "0.1.1"
edition = "2024"
authors = ["Brian Horakh <brian@promptexecution.com>"]
description = "Production-ready MCP (Model Context Protocol) server for Justfile integration"
documentation = "https://docs.rs/just-mcp"
homepage = "https://github.com/promptexecution/just-mcp"
repository = "https://github.com/promptexecution/just-mcp"
license = "MIT"
keywords = ["mcp", "justfile", "build-tool", "automation", "llm"]
categories = ["command-line-utilities", "development-tools", "development-tools::build-utils"]
readme = "README.md"
exclude = [
    ".git*",
    ".cursor/",
    ".roo/", 
    ".taskmaster/",
    "logs/",
    "cache/",
    "integration_test/",
    "test-fixtures/",
    "TODO.pm",
    ".windsurfrules",
    ".roomodes",
    ".rooignore",
    "RMCP_SYNTAX_FIXES.md",
    "AGENTS.md"
]

[[bin]]
name = "just-mcp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
just-mcp-lib = { version = "0.1.0", path = "just-mcp-lib" }
rmcp = { version = "0.3.0", features = ["client", "transport-child-process"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
snafu = "0.8.6"
tokio = { version = "1.46.1", features = ["full"] }

[dev-dependencies]
tempfile = "3.20.0"
