[package]
name = "just-mcp-lib"
version = "0.1.1"
edition = "2024"
authors = ["Brian Horakh <brian@promptexecution.com>"]
description = "Core library for just-mcp: MCP server for Justfile integration"
documentation = "https://docs.rs/just-mcp-lib"
homepage = "https://github.com/promptexecution/just-mcp"
repository = "https://github.com/promptexecution/just-mcp"
license = "MIT"
keywords = ["mcp", "justfile", "parser", "executor", "llm"]
categories = ["parser-implementations", "development-tools", "development-tools::build-utils"]
readme = "../README.md"

[dependencies]
dotenvy = "0.15.7"
rmcp = { version = "0.3.0", features = ["server", "macros", "transport-io", "schemars", "uuid"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
snafu = "0.8.6"
tokio = { version = "1.46.1", features = ["full"] }

[dev-dependencies]
tempfile = "3.20.0"
