[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "just-mcp"
version = "0.1.0"
description = "Production-ready MCP (Model Context Protocol) server for Justfile integration"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Brian Horakh", email = "brian@promptexecution.com" }
]
keywords = [
    "mcp",
    "justfile",
    "just",
    "build-tool",
    "automation",
    "llm",
    "ai",
    "model-context-protocol"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/promptexecution/just-mcp"
Documentation = "https://github.com/promptexecution/just-mcp"
Repository = "https://github.com/promptexecution/just-mcp"
Issues = "https://github.com/promptexecution/just-mcp/issues"

[project.scripts]
just-mcp = "just_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["just_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "just_mcp",
    "README.md",
    "LICENSE"
]
